--- a/Week-01-Pandas/Lecture.ipynb
+++ b/Week-01-Pandas/Lecture.ipynb
@@ -10,6 +10,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "this is a jupyter notebook\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello world\")\n",
+    "print(\"this is a jupyter notebook\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -6794,7 +6813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
