--- a/Week-01-Pandas/Exercise.ipynb
+++ b/Week-01-Pandas/Exercise.ipynb
@@ -34,12 +34,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "Change one more time\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")"
+    "print(\"Change one more time\")"
    ]
   },
   {
